{
  "version": 4,
  "terraform_version": "0.12.7",
  "serial": 2821,
  "lineage": "bdf9b23b-5ba7-2145-c6fd-326e68768737",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_ip_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0bac184493661d803",
            "public_dns": "ec2-18-200-181-205.eu-west-1.compute.amazonaws.com",
            "public_ip": "18.200.181.205",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_ip_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-021a717125bf10002",
            "public_dns": "ec2-63-32-219-230.eu-west-1.compute.amazonaws.com",
            "public_ip": "63.32.219.230",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0bacab207e86d848e",
            "owner_id": "116177369426",
            "tags": {
              "key": "Name",
              "propagate_at_launch": "true",
              "value": "test"
            },
            "vpc_id": "vpc-09716cb392f492436"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_lb",
      "name": "loadbalancer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:116177369426:loadbalancer/app/jml-alb/73444035a7abb9f6",
            "arn_suffix": "app/jml-alb/73444035a7abb9f6",
            "dns_name": "jml-alb-1137975540.eu-west-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:116177369426:loadbalancer/app/jml-alb/73444035a7abb9f6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jml-alb",
            "security_groups": [
              "sg-03e4f4aaea466bebe"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-000fd9fea6790f9f8"
              },
              {
                "subnet_id": "subnet-05cbe2ba3c12eded5"
              }
            ],
            "subnets": [
              "subnet-000fd9fea6790f9f8",
              "subnet-05cbe2ba3c12eded5"
            ],
            "tags": {
              "Enviroment": "Production",
              "Name": "Application Load Balancer"
            },
            "vpc_id": "vpc-09716cb392f492436",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "depends_on": [
            "aws_security_group.external_sg"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:116177369426:listener/app/jml-alb/73444035a7abb9f6/5005e4165c6a5eb6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:116177369426:listener/app/jml-alb/73444035a7abb9f6/5005e4165c6a5eb6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:116177369426:loadbalancer/app/jml-alb/73444035a7abb9f6",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.loadbalancer"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https_listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:116177369426:listener/app/jml-alb/73444035a7abb9f6/8295709ba2dc0e51",
            "certificate_arn": "arn:aws:acm:eu-west-1:116177369426:certificate/d2031d1c-2b3a-45b3-ad96-ced22bb1939c",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:116177369426:targetgroup/tg-loadbalancer-prod/11d194746b8644ce",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:116177369426:listener/app/jml-alb/73444035a7abb9f6/8295709ba2dc0e51",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:116177369426:loadbalancer/app/jml-alb/73444035a7abb9f6",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "depends_on": [
            "aws_acm_certificate.cert",
            "aws_lb.loadbalancer",
            "aws_lb_target_group.lb_targetgroup"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_targetgroup",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:116177369426:targetgroup/tg-loadbalancer-prod/11d194746b8644ce",
            "arn_suffix": "targetgroup/tg-loadbalancer-prod/11d194746b8644ce",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 28,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:116177369426:targetgroup/tg-loadbalancer-prod/11d194746b8644ce",
            "lambda_multi_value_headers_enabled": false,
            "name": "tg-loadbalancer-prod",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 600,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09716cb392f492436"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bac184493661d803",
            "id": "nat-0148c26e0fb2911f5",
            "network_interface_id": "eni-038450b253d60dad1",
            "private_ip": "192.168.4.63",
            "public_ip": "18.200.181.205",
            "subnet_id": "subnet-0b05f81f163b0009f"
          },
          "depends_on": [
            "aws_eip.nat_ip_1",
            "aws_subnet.public_subnet_1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-021a717125bf10002",
            "id": "nat-0a785597c52e4513d",
            "network_interface_id": "eni-01ebd374ab4b7ff95",
            "private_ip": "192.168.7.75",
            "public_ip": "63.32.219.230",
            "subnet_id": "subnet-0886a957193bcd59a"
          },
          "depends_on": [
            "aws_eip.nat_ip_2",
            "aws_subnet.public_subnet_2"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dmz_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-009dec735f6e86a0f",
            "owner_id": "116177369426",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bacab207e86d848e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-09716cb392f492436"
          },
          "depends_on": [
            "aws_internet_gateway.gateway",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0cfa4b81970221a44",
            "owner_id": "116177369426",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0148c26e0fb2911f5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-09716cb392f492436"
          },
          "depends_on": [
            "aws_nat_gateway.ngw_1",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02b7bede9acc25ad6",
            "owner_id": "116177369426",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0a785597c52e4513d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-09716cb392f492436"
          },
          "depends_on": [
            "aws_nat_gateway.ngw_2",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a5846cfe85366f32",
            "owner_id": "116177369426",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bacab207e86d848e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-09716cb392f492436"
          },
          "depends_on": [
            "aws_internet_gateway.gateway",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d9e29793e5763662",
            "owner_id": "116177369426",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bacab207e86d848e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-09716cb392f492436"
          },
          "depends_on": [
            "aws_internet_gateway.gateway",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dmz_route_association_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9a8d60941580b5e",
            "route_table_id": "rtb-009dec735f6e86a0f",
            "subnet_id": "subnet-05cbe2ba3c12eded5"
          },
          "depends_on": [
            "aws_route_table.dmz_route_table",
            "aws_subnet.dmz_subnet_1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dmz_route_association_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0640c3bf9570e6832",
            "route_table_id": "rtb-009dec735f6e86a0f",
            "subnet_id": "subnet-000fd9fea6790f9f8"
          },
          "depends_on": [
            "aws_route_table.dmz_route_table",
            "aws_subnet.dmz_subnet_2"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_association1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058325f06c5ec10be",
            "route_table_id": "rtb-0cfa4b81970221a44",
            "subnet_id": "subnet-0814ec73709e12859"
          },
          "depends_on": [
            "aws_route_table.private_route_table_1",
            "aws_subnet.private_subnet_1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_association2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4e07ce6ad732266",
            "route_table_id": "rtb-02b7bede9acc25ad6",
            "subnet_id": "subnet-0238e9c78aa40814a"
          },
          "depends_on": [
            "aws_route_table.private_route_table_2",
            "aws_subnet.private_subnet_2"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_association_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6383df455cefd73",
            "route_table_id": "rtb-0a5846cfe85366f32",
            "subnet_id": "subnet-0b05f81f163b0009f"
          },
          "depends_on": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_association_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056e18c995312d13a",
            "route_table_id": "rtb-0a5846cfe85366f32",
            "subnet_id": "subnet-0886a957193bcd59a"
          },
          "depends_on": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_2"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "external_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:116177369426:security-group/sg-03e4f4aaea466bebe",
            "description": "Allow external HTTP inbound traffic and outbound traffic to api-servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e4f4aaea466bebe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "external_sg",
            "name_prefix": null,
            "owner_id": "116177369426",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-09716cb392f492436"
          }
        }
      ]
    },
    {
      "module": "module.database",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:116177369426:security-group/sg-01234063554c28f56",
            "description": "This security group will be applied to database servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "id": "sg-01234063554c28f56",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04068538db24124a7"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04068538db24124a7"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private_sg",
            "name_prefix": null,
            "owner_id": "116177369426",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-09716cb392f492436"
          }
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:116177369426:security-group/sg-04068538db24124a7",
            "description": "This will be applied to all the application servers",
            "egress": [],
            "id": "sg-04068538db24124a7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03e4f4aaea466bebe"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03e4f4aaea466bebe"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public_sg",
            "name_prefix": null,
            "owner_id": "116177369426",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-09716cb392f492436"
          },
          "depends_on": [
            "aws_security_group.external_sg"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:116177369426:security-group/sg-089a76d2e200266c0",
            "description": "Allow inbound SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-089a76d2e200266c0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh_sg",
            "name_prefix": null,
            "owner_id": "116177369426",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-09716cb392f492436"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dmz_subnet_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:116177369426:subnet/subnet-05cbe2ba3c12eded5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "192.168.0.0/23",
            "id": "subnet-05cbe2ba3c12eded5",
            "map_public_ip_on_launch": false,
            "owner_id": "116177369426",
            "vpc_id": "vpc-09716cb392f492436"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dmz_subnet_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:116177369426:subnet/subnet-000fd9fea6790f9f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "192.168.2.0/23",
            "id": "subnet-000fd9fea6790f9f8",
            "map_public_ip_on_launch": false,
            "owner_id": "116177369426",
            "vpc_id": "vpc-09716cb392f492436"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:116177369426:subnet/subnet-0814ec73709e12859",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "192.168.8.0/23",
            "id": "subnet-0814ec73709e12859",
            "map_public_ip_on_launch": false,
            "owner_id": "116177369426",
            "vpc_id": "vpc-09716cb392f492436"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:116177369426:subnet/subnet-0238e9c78aa40814a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "192.168.10.0/23",
            "id": "subnet-0238e9c78aa40814a",
            "map_public_ip_on_launch": false,
            "owner_id": "116177369426",
            "vpc_id": "vpc-09716cb392f492436"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:116177369426:subnet/subnet-0b05f81f163b0009f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "192.168.4.0/23",
            "id": "subnet-0b05f81f163b0009f",
            "map_public_ip_on_launch": true,
            "owner_id": "116177369426",
            "vpc_id": "vpc-09716cb392f492436"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:116177369426:subnet/subnet-0886a957193bcd59a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "192.168.6.0/23",
            "id": "subnet-0886a957193bcd59a",
            "map_public_ip_on_launch": true,
            "owner_id": "116177369426",
            "vpc_id": "vpc-09716cb392f492436"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:116177369426:vpc/vpc-09716cb392f492436",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/19",
            "default_network_acl_id": "acl-04eaa671eeb5dac21",
            "default_route_table_id": "rtb-0ae78bf8c47b5f2a7",
            "default_security_group_id": "sg-080408c6c7c46045b",
            "dhcp_options_id": "dopt-dce8afba",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09716cb392f492436",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ae78bf8c47b5f2a7",
            "owner_id": "116177369426"
          }
        }
      ]
    }
  ]
}